fix main video display, fix stretching pages, create react carousel

--- a/redflix/app/assets/stylesheets/api/genres.scss
+++ b/redflix/app/assets/stylesheets/api/genres.scss
@@ -7,9 +7,11 @@
     margin-left: 3%;
     color: white;
     max-width: 100%;
+    overflow: hidden;
 
     #link-to-new-page {
         font-size: 20px;
+        margin-left: 2%;
         color: white;
         text-decoration: none;
     }
@@ -18,6 +20,14 @@
 img {
     width: 200px;
     height: 280px;
+}
+
+.my-list {
+    position: relative;
+    top: 25%;
+    height: 200%;
+    overflow: hidden;
+    width: 100%;
 }
 
 .genre {
@@ -58,12 +68,11 @@ img {
        }
 
        #movie-dropbar-title {
-            padding: 10%;
+            padding-top: 6%;
+            padding-left: 10%;
             font-size: xx-large;
-            display: inline-flex;;
-            // top: 5%;
+            display: inline-flex;
             color: white;
-            // z-index: 5;
        }
 
        #dropdown-close {
@@ -110,10 +119,21 @@ img {
 }
 
 .genre-movie-play {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+    z-index: -10000;
+    margin-bottom: 5px;
+}
+
+.movie-list-movie-play {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
+    height: 100%;
     z-index: -10000;
     margin-bottom: 5px;
 }
@@ -122,6 +142,7 @@ img {
     margin-top: 15px; 
     display: flex;
     max-width: 100%;
+    margin-left: 2%;
 
     &:hover {
         .li {
@@ -157,6 +178,21 @@ img {
 
 }
 
+#move-arrow-left {
+   position: relative;
+   top: -160px;
+   left: -1px;
+   font-size: xx-large;
+}
+
+#move-arrow-right {
+    position: relative;
+    top: -200px;
+    right: -1260px;
+    font-size: xx-large;
+    
+}
+
 
 .movie-list-item-content {
    font-weight: 700;
@@ -166,9 +202,8 @@ img {
    position: relative;
      
    #movie-title {
-       margin-top: 40%;
-       margin-left: 10%;
-       margin-right: 10%;
+       margin-top: 60%;
+       text-align: center;
        font-size: 20px;
        color: blue($color: white);
    }
@@ -222,12 +257,24 @@ img {
         border-radius: 2px;
         }
 
+    #open-movie-page {
+        font-size: 400%;
+        color: red;
+        position: absolute;
+        left: 70px;
+        top: 60px;
+    }
+
     #open-dropdown-movie {
-        position: relative;
+        position: absolute;
+        bottom: 4px;
+        right: 90px;
         font-size: 200%;
-        margin-left: 45%;
-        margin-top: 20%;
-        margin-bottom: 5%;
+        /* margin-left: 45%; */
+        /* margin-top: 20%; */
+        text-align: center;
+        /* margin-top: 60px; */
+        margin-bottom: 3%;
         
     }
 }
@@ -250,7 +297,7 @@ img {
        font-size: 100%;
        margin-left: auto;
        margin-right: 50%;
-       margin-top: 20%;
+       margin-top: -25%;
    }
 }
 
